# dprintx

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  publish.yml
src/: cli.rs  config.rs  lsp.rs  main.rs  matcher.rs  runner.rs
