[package]
name = "dprintx"
version = "0.3.0"
categories = ["development-tools", "command-line-utilities"]
edition = "2024"
keywords = ["dprint", "formatter", "multi-config", "code-formatting"]
license = "MIT"
repository = "https://github.com/mocksoul/dprintx"
description = "Multi-profile wrapper for dprint — run multiple dprint configs with file matching rules"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
globset = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
